--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@next/font": "^13.0.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "eslint-config-next": "^13.0.4",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
