--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "eslint-config-next": "^13.0.4",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "gray-matter": "^4.0.3",
     "next": "^13.0.4",
     "react": "^18.2.0",
