--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql-request": "^5.0.0",
     "gray-matter": "^4.0.3",
     "next": "^13.0.4",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
