--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "swiper": "^8.4.5",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
