--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.4",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "eslint-config-next": "^13.0.4",
