--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@next/font": "^13.0.4",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@supabase/supabase-js": "^2.1.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "eslint-config-next": "^13.0.4",
@@ -16,8 +17,10 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "gray-matter": "^4.0.3",
+    "motion": "^10.14.3",
     "next": "^13.0.4",
     "papaparse": "^5.3.2",
+    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
