--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "cache-posts": "node scripts/cache.ts"
   },
   "dependencies": {
     "@markdoc/markdoc": "^0.2.1",
@@ -19,6 +20,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "gray-matter": "^4.0.3",
+    "husky": "^8.0.2",
     "motion": "^10.14.3",
     "next": "^13.0.4",
     "papaparse": "^5.3.2",
@@ -36,6 +38,13 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "husky": "^4.2.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn cache-posts && git add cache/data.js"
+    }
   }
+  
 }
