--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
-    "husky": "^4.2.5"
+    "tailwindcss": "^3.1.4"
   }
   
 }
