--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "swiper": "^8.4.5",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "use-debounce": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
