--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@markdoc/next.js": "^0.2.1",
     "@next/font": "^13.0.4",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@nuclia/core": "^1.0.6",
     "@supabase/supabase-js": "^2.1.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -22,6 +23,8 @@
     "graphql-request": "^5.0.0",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.2",
+    "isomorphic-unfetch": "^3.1.0",
+    "localstorage-polyfill": "^1.0.1",
     "motion": "^10.14.3",
     "next": "^13.0.4",
     "papaparse": "^5.3.2",
