--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@next/font": "^13.0.4",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@nuclia/core": "^1.0.6",
-    "@supabase/supabase-js": "^2.1.1",
+    "@supabase/supabase-js": "^2.1.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "eslint-config-next": "^13.0.4",
@@ -43,6 +43,7 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "supabase": "^1.22.0",
     "tailwindcss": "^3.2.4"
   }
 }
